# pymap

./: .buildinfo  .coveragerc  .dockerignore  .flake8  .gitignore  .travis.yml  LICENSE  LICENSE.md  MANIFEST.in  README.md  concurrent.html  config.html  exceptions.html  flags.html  genindex.html  index.html  interfaces.html  keyval.dict.html  keyval.html  keyval.maildir.html  listtree.html  mailbox.html  message.html  objects.inv  parsing.html  proxy.html  py-modindex.html  pymap.admin.html  pymap.backend.dict.html  pymap.backend.html  pymap.backend.maildir.html  pymap.backend.redis.html  pymap.bytes.html  pymap.cluster.html  pymap.concurrent.html  pymap.config.html  pymap.context.html  pymap.exceptions.html  pymap.fetch.html  pymap.filter.html  (+37 more)
.github/workflows/: docker-build.yml  docker-check.yml  docker-publish.yml  python-check.yml  python-doc.yml  python-package.yml  python-publish.yml  release-drafter.yml
_modules/: index.html
_modules/pymap/: admin.html  bytes.html  cluster.html  concurrent.html  config.html  exceptions.html  fetch.html  filter.html  flags.html  frozen.html  imap.html  listtree.html  mailbox.html  message.html  mime.html  parsing.html  plugin.html  search.html  selected.html  sieve.html  sockets.html  threads.html  token.html  user.html  versioned.html
_modules/pymap/admin/: errors.html  handlers.html  typing.html
_modules/pymap/backend/: dict.html  mailbox.html  maildir.html  redis.html  session.html
_modules/pymap/cluster/: swim.html
_modules/pymap/imap/: state.html
_modules/pymap/interfaces/: backend.html  filter.html  login.html  mailbox.html  message.html  session.html
_modules/pymap/mime/: cte.html  parsed.html
_modules/pymap/parsing/: command.html  commands.html  exceptions.html  message.html  modutf7.html  primitives.html  response.html  state.html
_modules/pymap/sieve/: manage.html  tests.html
_modules/pymap/token/: macaroon.html
_sources/: concurrent.rst.txt  config.rst.txt  index.rst.txt  pymap.backend.dict.rst.txt  pymap.backend.maildir.rst.txt  pymap.backend.redis.rst.txt  pymap.backend.rst.txt  pymap.cluster.rst.txt  pymap.context.rst.txt  pymap.filter.rst.txt  pymap.imap.rst.txt  pymap.interfaces.rst.txt  pymap.keyval.dict.rst.txt  pymap.mime.rst.txt  pymap.parsing.rst.txt  pymap.sieve.rst.txt  pymap.sockets.rst.txt  pymap.state.rst.txt  search.rst.txt
_static/: basic.css  cloud.css  documentation_options.js
doc/: push.sh  requirements.txt
doc/source/: conf.py  exceptions.rst  flags.rst  index.rst  interfaces.rst  keyval.maildir.rst  keyval.rst  parsing.rst  peerinfo.rst  proxy.rst  pymap.admin.rst  pymap.backend.maildir.rst  pymap.backend.redis.rst  pymap.backend.rst  pymap.bytes.rst  pymap.fetch.rst  pymap.frozen.rst  pymap.imap.rst  pymap.interfaces.rst  pymap.keyval.maildir.rst  pymap.keyval.rst  pymap.listtree.rst  pymap.mailbox.rst  pymap.message.rst  pymap.mime.rst  pymap.plugin.rst  pymap.search.rst  pymap.server.rst  pymap.service.rst  pymap.sieve.rst  pymap.threads.rst  pymap.token.rst  pymap.user.rst  pymap.versioned.rst  selected.rst  sockinfo.rst
docker/: Dockerfile  README.md  check-stale-pid.sh
docker/hooks/: build  post_push
pymap/: __about__.py  __init__.py  bytes.py  concurrent.py  config.py  context.py  core.py  exceptions.py  fetch.py  filter.py  flag.py  flags.py  frozen.py  health.py  interfaces.py  listtree.py  mailbox.py  main.py  message.py  parser.py  peerinfo.py  plugin.py  proxy.py  search.py  selected.py  server.py  service.py  sockets.py  sockinfo.py  state.py  structure.py  threads.py  updates.py  user.py  versioned.py
pymap/admin/: __init__.py  _util.py  errors.py  handlers.py  server.py  token.py  typing.py
pymap/admin/client/: __init__.py  append.py  command.py  main.py
pymap/admin/grpc/: README.md  admin.proto  admin_grpc.py  admin_grpc.pyi  admin_pb2.py  admin_pb2.pyi  grpc_tools.protoc-args
pymap/admin/handlers/: __init__.py  mailbox.py  system.py  user.py
pymap/backend/: __init__.py  mailbox.py  session.py  util.py
pymap/backend/dict/: __init__.py  filter.py  mailbox.py
pymap/backend/maildir/: __init__.py  flags.py  io.py  layout.py  mailbox.py  subscriptions.py  uidlist.py  users.py
pymap/backend/redis/: __init__.py  _util.py  background.py  cleanup.py  filter.py  keys.py  mailbox.py  message.py
pymap/bytes/: __init__.py  rev.py  rev.pyi
pymap/cluster/: __init__.py  swim.py
pymap/demo/: __init__.py  mailbox.py  message.py  session.py  state.py
pymap/imap/: __init__.py  state.py
pymap/interfaces/: __init__.py  backend.py  filter.py  login.py  mailbox.py  message.py  session.py  token.py  users.py
pymap/keyval/: __init__.py  mailbox.py  session.py  util.py
pymap/keyval/demo/: __init__.py  mailbox.py
pymap/keyval/dict/: __init__.py  mailbox.py
pymap/keyval/maildir/: __init__.py  flags.py  io.py  layout.py  mailbox.py  uidlist.py
pymap/mime/: __init__.py  _util.py  cte.py  parsed.py
pymap/parsing/: __init__.py  commands.py  exceptions.py  message.py  modutf7.py  primitives.py  specials.py  state.py  structure.py  typing.py  util.py
pymap/plugin/: __init__.py  extras.toml
pymap/sieve/: __init__.py  runner.py  tests.py  util.py
pymap/token/: __init__.py  macaroon.py
tasks/: __init__.py  check.py  doc.py  lint.py  test.py  types.py
test/: mocktransport.py  requirements.txt  test_cluster.py  test_health.py  test_listtree.py  test_mime.py  test_mime_cte.py  test_parsing.py  test_parsing_command.py  test_parsing_command_any.py  test_parsing_command_auth.py  test_parsing_command_nonauth.py  test_parsing_command_select.py  test_parsing_primitives.py  test_parsing_response.py  test_parsing_response_code.py  test_parsing_response_specials.py  test_parsing_specials.py  test_selected.py  test_sequenceset.py  test_server.py
test/server/: base.py  mocktransport.py  test_admin.py  test_admin_auth.py  test_admin_mailbox.py  test_admin_system.py  test_admin_user.py  test_copy.py  test_expunge.py  test_fetch.py  test_idle.py  test_mailbox.py  test_managesieve.py  test_readonly.py  test_rename.py  test_search.py  test_session.py  test_store.py
(+106 files in other folders)
