[metadata]
name = pymap
version = 0.8.0
author = Ian Good
author_email = icgood@gmail.com
description = Lightweight, asynchronous IMAP serving in Python.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/icgood/pymap/
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Communications :: Email :: Post-Office
    Topic :: Communications :: Email :: Post-Office :: IMAP
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
python_requires = ~=3.7
include_package_data = True
packages = find:
install_requires =
    pysasl
    typing-extensions

[options.package_data]
pymap = py.typed
pymap.backend.dict = demo/

[options.extras_require]
redis = aioredis
grpc =
    grpclib
    protobuf
sieve = sievelib

[options.entry_points]
console_scripts =
    pymap = pymap.main:main
    pymap-admin = pymap.admin.client:main [grpc]
pymap.backend =
    dict = pymap.backend.dict:DictBackend
    maildir = pymap.backend.maildir:MaildirBackend
    redis = pymap.backend.redis:RedisBackend [redis]
pymap.service =
    imap = pymap.imap:IMAPService
    admin = pymap.admin:AdminService [grpc]
pymap.filter =
    sieve = pymap.sieve:SieveCompiler [sieve]

[tool:pytest]
norecursedirs = doc build grpc
